bppackaging/src/objects/Part_FIFO_Bucket__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Return__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Return</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>Part FIFO Buckets</relationshipLabel>
        <relationshipName>Part_FIFO_Buckets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_FIFO_Bucket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is FIFO Bucket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Adjust_Number__c</fullName>
        <label>Part Adjust Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Part FIFO Buckets</relationshipLabel>
        <relationshipName>Part_FIFO_Buckets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty_In__c</fullName>
        <label>Qty In</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Out__c</fullName>
        <label>Qty Out</label>
        <summarizedField>Part_FIFO_Bucket_Activity_Line_Item__c.Qty_Out__c</summarizedField>
        <summaryForeignKey>Part_FIFO_Bucket_Activity_Line_Item__c.Part_FIFO_Bucket__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Qty__c</fullName>
        <formula>Qty_In__c -  Qty_Out__c</formula>
        <label>Remaining Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Count__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Count</label>
        <referenceTo>Stock_Count__c</referenceTo>
        <relationshipLabel>Part FIFO Buckets</relationshipLabel>
        <relationshipName>Part_FIFO_Buckets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Cost__c  *  Remaining_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Part</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <formula>if(LEN(TEXT(Part_Adjust_Number__c)) == 5, &apos;PA-&apos; &amp;  TEXT(Part_Adjust_Number__c),
  if(LEN(TEXT(Part_Adjust_Number__c)) == 4, &apos;PA-0&apos; &amp;  TEXT(Part_Adjust_Number__c),
  if(LEN(TEXT(Part_Adjust_Number__c)) == 3, &apos;PA-00&apos; &amp;  TEXT(Part_Adjust_Number__c),
  if(LEN(TEXT(Part_Adjust_Number__c)) == 2, &apos;PA-000&apos; &amp;  TEXT(Part_Adjust_Number__c),
  if(LEN(TEXT(Part_Adjust_Number__c)) == 1, &apos;PA-0000&apos; &amp;  TEXT(Part_Adjust_Number__c),&apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoicing_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Invoicing Header</label>
        <referenceTo>Vendor_Invoicing_Header__c</referenceTo>
        <relationshipLabel>Part FIFO Buckets</relationshipLabel>
        <relationshipName>Part_FIFO_Buckets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Receiving_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Receiving Header</label>
        <referenceTo>Vendor_Receiving_Header__c</referenceTo>
        <relationshipLabel>Part FIFO Buckets</relationshipLabel>
        <relationshipName>Part_FIFO_Buckets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Part FIFO Bucket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PBN-{00000000}</displayFormat>
        <label>Part FIFO Bucket  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part FIFO Buckets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>